个人写真集 封面 修改为 卡片式 展示

--- a/LoveLove/Modules/Home/WaterLayout/WaterList2.plist
+++ b/LoveLove/Modules/Home/WaterLayout/WaterList2.plist
@@ -6,7 +6,7 @@
 		<key>h</key>
 		<integer>1024</integer>
 		<key>img</key>
-		<string>http://img.zngirls.com/gallery/19705/19815/0.jpg</string>
+		<string>https://thumbnail0.baidupcs.com/thumbnail/da9a5385a8df5c0724ba887c11a8c82a?fid=3710047365-250528-393485667326349&amp;time=1480168800&amp;rt=sh&amp;sign=FDTAER-DCb740ccc5511e5e8fedcff06b081203-rhjP9JSChy0mI6cQmhoKfy%2B0SjY%3D&amp;expires=8h&amp;chkv=0&amp;chkbd=0&amp;chkpc=&amp;dp-logid=7675529127215596353&amp;dp-callid=0&amp;size=c710_u400&amp;quality=100</string>
 		<key>w</key>
 		<integer>727</integer>
 	</dict>
@@ -14,7 +14,7 @@
 		<key>h</key>
 		<integer>667</integer>
 		<key>img</key>
-		<string>http://img.zngirls.com/gallery/19705/19116/0.jpg</string>
+		<string>https://thumbnail0.baidupcs.com/thumbnail/fe8d6706dff6744b154ef6a3068ba86d?fid=3710047365-250528-823702662404670&amp;time=1480168800&amp;rt=sh&amp;sign=FDTAER-DCb740ccc5511e5e8fedcff06b081203-DA8TTFdxk4p5wwdTYkIiHy02Y9U%3D&amp;expires=8h&amp;chkv=0&amp;chkbd=0&amp;chkpc=&amp;dp-logid=7675549353066253137&amp;dp-callid=0&amp;size=c710_u400&amp;quality=100</string>
 		<key>w</key>
 		<integer>400</integer>
 	</dict>
@@ -22,7 +22,7 @@
 		<key>h</key>
 		<integer>1024</integer>
 		<key>img</key>
-		<string>http://img.zngirls.com/gallery/19705/18957/0.jpg</string>
+		<string>https://thumbnail0.baidupcs.com/thumbnail/24b8cb55a7d83aebbd0e0d7643550fe4?fid=3710047365-250528-975940672755008&amp;time=1480168800&amp;rt=sh&amp;sign=FDTAER-DCb740ccc5511e5e8fedcff06b081203-ot%2FC%2BfaCoIVUe9Fd3ozLW6TUq5s%3D&amp;expires=8h&amp;chkv=0&amp;chkbd=0&amp;chkpc=&amp;dp-logid=7675579671696827974&amp;dp-callid=0&amp;size=c710_u400&amp;quality=100</string>
 		<key>w</key>
 		<integer>683</integer>
 	</dict>
@@ -30,7 +30,7 @@
 		<key>h</key>
 		<integer>626</integer>
 		<key>img</key>
-		<string>http://img.zngirls.com/gallery/19705/18706/0.jpg</string>
+		<string>https://thumbnail0.baidupcs.com/thumbnail/3ff1d9d1c069a71ddf698d8d85fa643d?fid=3710047365-250528-400345068020844&amp;time=1480168800&amp;rt=sh&amp;sign=FDTAER-DCb740ccc5511e5e8fedcff06b081203-Haz9sHZfrr5g3jUpTCGlaBUtr3A%3D&amp;expires=8h&amp;chkv=0&amp;chkbd=0&amp;chkpc=&amp;dp-logid=7675583266399159972&amp;dp-callid=0&amp;size=c710_u400&amp;quality=100</string>
 		<key>w</key>
 		<integer>416</integer>
 	</dict>
@@ -38,7 +38,7 @@
 		<key>h</key>
 		<integer>1024</integer>
 		<key>img</key>
-		<string>http://img.zngirls.com/gallery/19705/18254/0.jpg</string>
+		<string>https://thumbnail0.baidupcs.com/thumbnail/f3af4308959ceb44681faef888ee1b06?fid=3710047365-250528-504144403209380&amp;time=1480168800&amp;rt=sh&amp;sign=FDTAER-DCb740ccc5511e5e8fedcff06b081203-%2F5h%2BssiFC4ju83qLMwooReVMcVs%3D&amp;expires=8h&amp;chkv=0&amp;chkbd=0&amp;chkpc=&amp;dp-logid=7675589436072166447&amp;dp-callid=0&amp;size=c710_u400&amp;quality=100</string>
 		<key>w</key>
 		<integer>727</integer>
 	</dict>
@@ -46,7 +46,7 @@
 		<key>h</key>
 		<integer>399</integer>
 		<key>img</key>
-		<string>http://img.zngirls.com/gallery/19705/17931/0.jpg</string>
+		<string>https://thumbnail0.baidupcs.com/thumbnail/dc49c7cbf0f74eeaee85ffae297f3e50?fid=3710047365-250528-1019638018944436&amp;time=1480168800&amp;rt=sh&amp;sign=FDTAER-DCb740ccc5511e5e8fedcff06b081203-%2ByKvCad1RP56pSuTSMiPVX8pLbE%3D&amp;expires=8h&amp;chkv=0&amp;chkbd=0&amp;chkpc=&amp;dp-logid=7675593334634422814&amp;dp-callid=0&amp;size=c710_u400&amp;quality=100</string>
 		<key>w</key>
 		<integer>295</integer>
 	</dict>
@@ -54,7 +54,7 @@
 		<key>h</key>
 		<integer>1024</integer>
 		<key>img</key>
-		<string>http://img.zngirls.com/gallery/19705/17836/0.jpg</string>
+		<string>https://thumbnail0.baidupcs.com/thumbnail/34014397b487c07f668450c18ef25d52?fid=3710047365-250528-717062580922186&amp;time=1480168800&amp;rt=sh&amp;sign=FDTAER-DCb740ccc5511e5e8fedcff06b081203-9PYWd1ZjEcpT%2FTjVTXa0quXRlJg%3D&amp;expires=8h&amp;chkv=0&amp;chkbd=0&amp;chkpc=&amp;dp-logid=7675602140057538178&amp;dp-callid=0&amp;size=c710_u400&amp;quality=100</string>
 		<key>w</key>
 		<integer>664</integer>
 	</dict>
@@ -62,7 +62,7 @@
 		<key>h</key>
 		<integer>648</integer>
 		<key>img</key>
-		<string>http://img.zngirls.com/gallery/19705/17769/0.jpg</string>
+		<string>https://thumbnail0.baidupcs.com/thumbnail/a96550330efb8922eaf6ac02ab99070c?fid=3710047365-250528-318252838718379&amp;time=1480168800&amp;rt=sh&amp;sign=FDTAER-DCb740ccc5511e5e8fedcff06b081203-2s%2BGsA3HouzETSlGIUxUGoS8Dhg%3D&amp;expires=8h&amp;chkv=0&amp;chkbd=0&amp;chkpc=&amp;dp-logid=7675609551355867398&amp;dp-callid=0&amp;size=c710_u400&amp;quality=100</string>
 		<key>w</key>
 		<integer>470</integer>
 	</dict>
@@ -70,7 +70,7 @@
 		<key>h</key>
 		<integer>860</integer>
 		<key>img</key>
-		<string>http://img.zngirls.com/gallery/19705/17688/0.jpg</string>
+		<string>https://thumbnail0.baidupcs.com/thumbnail/814b049bd0df1b3799333c10beea48f6?fid=3710047365-250528-813775487797926&amp;time=1480168800&amp;rt=sh&amp;sign=FDTAER-DCb740ccc5511e5e8fedcff06b081203-t1qsv1Vo3Dl44G4mf05yEsZNKyg%3D&amp;expires=8h&amp;chkv=0&amp;chkbd=0&amp;chkpc=&amp;dp-logid=7675614520816367476&amp;dp-callid=0&amp;size=c710_u400&amp;quality=100</string>
 		<key>w</key>
 		<integer>567</integer>
 	</dict>
@@ -78,7 +78,7 @@
 		<key>h</key>
 		<integer>1024</integer>
 		<key>img</key>
-		<string>http://img.zngirls.com/gallery/19705/17688/0.jpg</string>
+		<string>https://thumbnail0.baidupcs.com/thumbnail/31a3cd18126710520bc105aa1d66cf77?fid=3710047365-250528-887043882766336&amp;time=1480168800&amp;rt=sh&amp;sign=FDTAER-DCb740ccc5511e5e8fedcff06b081203-daLUQVMupLCHMB%2BqKBSjY9KDq0U%3D&amp;expires=8h&amp;chkv=0&amp;chkbd=0&amp;chkpc=&amp;dp-logid=7675618641819015595&amp;dp-callid=0&amp;size=c710_u400&amp;quality=100</string>
 		<key>w</key>
 		<integer>683</integer>
 	</dict>
@@ -86,7 +86,7 @@
 		<key>h</key>
 		<integer>1024</integer>
 		<key>img</key>
-		<string>http://img.zngirls.com/gallery/19705/17081/0.jpg</string>
+		<string>https://thumbnail0.baidupcs.com/thumbnail/c21f305ab9c39cbd7ecb8e25bd70a54a?fid=3710047365-250528-192269077022835&amp;time=1480168800&amp;rt=sh&amp;sign=FDTAER-DCb740ccc5511e5e8fedcff06b081203-mbjV4JonR1loVZUNn2eX%2FVTTJ%2F4%3D&amp;expires=8h&amp;chkv=0&amp;chkbd=0&amp;chkpc=&amp;dp-logid=7675637098663327001&amp;dp-callid=0&amp;size=c710_u400&amp;quality=100</string>
 		<key>w</key>
 		<integer>768</integer>
 	</dict>
@@ -94,7 +94,7 @@
 		<key>h</key>
 		<integer>700</integer>
 		<key>img</key>
-		<string>http://img.zngirls.com/gallery/19705/16868/0.jpg</string>
+		<string>https://thumbnail0.baidupcs.com/thumbnail/700f901181746fced0a3839ad03fd8e4?fid=3710047365-250528-239215179599068&amp;time=1480168800&amp;rt=sh&amp;sign=FDTAER-DCb740ccc5511e5e8fedcff06b081203-a9VmepwU1qwkt0upMFWZLJGHi64%3D&amp;expires=8h&amp;chkv=0&amp;chkbd=0&amp;chkpc=&amp;dp-logid=7675640662492217083&amp;dp-callid=0&amp;size=c710_u400&amp;quality=100</string>
 		<key>w</key>
 		<integer>500</integer>
 	</dict>
@@ -102,7 +102,7 @@
 		<key>h</key>
 		<integer>765</integer>
 		<key>img</key>
-		<string>http://img.zngirls.com/gallery/19705/16779/0.jpg</string>
+		<string>https://thumbnail0.baidupcs.com/thumbnail/a5a0e5d1782a6d041f3cca6ff7588d77?fid=3710047365-250528-685409179446997&amp;time=1480168800&amp;rt=sh&amp;sign=FDTAER-DCb740ccc5511e5e8fedcff06b081203-wux2fYzGiAbOiLPPuDjUc0Pq9oE%3D&amp;expires=8h&amp;chkv=0&amp;chkbd=0&amp;chkpc=&amp;dp-logid=7675644038822172929&amp;dp-callid=0&amp;size=c710_u400&amp;quality=100</string>
 		<key>w</key>
 		<integer>510</integer>
 	</dict>
@@ -110,7 +110,7 @@
 		<key>h</key>
 		<integer>1526</integer>
 		<key>img</key>
-		<string>http://img.zngirls.com/gallery/19705/16748/0.jpg</string>
+		<string>https://thumbnail0.baidupcs.com/thumbnail/7d2d2debe9238c1490c25437b468e9d4?fid=3710047365-250528-625477157874186&amp;time=1480168800&amp;rt=sh&amp;sign=FDTAER-DCb740ccc5511e5e8fedcff06b081203-2ue52I82oRzGqPy8VWw9p45mcv4%3D&amp;expires=8h&amp;chkv=0&amp;chkbd=0&amp;chkpc=&amp;dp-logid=7675647482609406467&amp;dp-callid=0&amp;size=c710_u400&amp;quality=100</string>
 		<key>w</key>
 		<real>1024</real>
 	</dict>
@@ -118,7 +118,7 @@
 		<key>h</key>
 		<integer>1024</integer>
 		<key>img</key>
-		<string>http://img.zngirls.com/gallery/19705/16542/0.jpg</string>
+		<string>https://thumbnail0.baidupcs.com/thumbnail/77ebb27fdf716991d15986aba5e411d0?fid=3710047365-250528-12862921875638&amp;time=1480168800&amp;rt=sh&amp;sign=FDTAER-DCb740ccc5511e5e8fedcff06b081203-YbvTKIipfv2gs1wSuuv8Pk00YwE%3D&amp;expires=8h&amp;chkv=0&amp;chkbd=0&amp;chkpc=&amp;dp-logid=7675651389901751052&amp;dp-callid=0&amp;size=c710_u400&amp;quality=100</string>
 		<key>w</key>
 		<integer>683</integer>
 	</dict>
@@ -126,7 +126,7 @@
 		<key>h</key>
 		<integer>1136</integer>
 		<key>img</key>
-		<string>http://img.zngirls.com/gallery/19705/16259/0.jpg</string>
+		<string>https://thumbnail0.baidupcs.com/thumbnail/a76c0eb0238ad6fc12095136a48b0c2e?fid=3710047365-250528-269068363438695&amp;time=1480168800&amp;rt=sh&amp;sign=FDTAER-DCb740ccc5511e5e8fedcff06b081203-6VBhwvIornELYgZpXwYUcz6i6Oo%3D&amp;expires=8h&amp;chkv=0&amp;chkbd=0&amp;chkpc=&amp;dp-logid=7675655496977277795&amp;dp-callid=0&amp;size=c710_u400&amp;quality=100</string>
 		<key>w</key>
 		<integer>640</integer>
 	</dict>
@@ -134,7 +134,7 @@
 		<key>h</key>
 		<integer>754</integer>
 		<key>img</key>
-		<string>http://img.zngirls.com/gallery/21337/16581/0.jpg</string>
+		<string>https://thumbnail0.baidupcs.com/thumbnail/4ced79306422348b830697d424071dec?fid=3710047365-250528-624301445167620&amp;time=1480168800&amp;rt=sh&amp;sign=FDTAER-DCb740ccc5511e5e8fedcff06b081203-xby%2FIPFecDknJY8AC4Rg%2Br46nnA%3D&amp;expires=8h&amp;chkv=0&amp;chkbd=0&amp;chkpc=&amp;dp-logid=7675658811661583904&amp;dp-callid=0&amp;size=c710_u400&amp;quality=100</string>
 		<key>w</key>
 		<integer>510</integer>
 	</dict>
@@ -142,7 +142,7 @@
 		<key>h</key>
 		<integer>1024</integer>
 		<key>img</key>
-		<string>http://img.zngirls.com/gallery/21337/16260/0.jpg</string>
+		<string>https://thumbnail0.baidupcs.com/thumbnail/3e98cfb267ec96bc1c928f4cdd9a18eb?fid=3710047365-250528-1049636968139780&amp;time=1480168800&amp;rt=sh&amp;sign=FDTAER-DCb740ccc5511e5e8fedcff06b081203-%2BOnob1t26%2FwZF1z6KqXCi3hPbM0%3D&amp;expires=8h&amp;chkv=0&amp;chkbd=0&amp;chkpc=&amp;dp-logid=7675662736720805707&amp;dp-callid=0&amp;size=c710_u400&amp;quality=100</string>
 		<key>w</key>
 		<integer>811</integer>
 	</dict>
@@ -150,7 +150,7 @@
 		<key>h</key>
 		<integer>600</integer>
 		<key>img</key>
-		<string>http://img.zngirls.com/gallery/21337/16149/0.jpg</string>
+		<string>https://thumbnail0.baidupcs.com/thumbnail/ef36bba3a2ca3dff4e6de9b843cddc58?fid=3710047365-250528-793931064867321&amp;time=1480168800&amp;rt=sh&amp;sign=FDTAER-DCb740ccc5511e5e8fedcff06b081203-gG8siK5O2hzSu7il8g4ZQirR6d8%3D&amp;expires=8h&amp;chkv=0&amp;chkbd=0&amp;chkpc=&amp;dp-logid=7675667083673548823&amp;dp-callid=0&amp;size=c710_u400&amp;quality=100</string>
 		<key>w</key>
 		<integer>470</integer>
 	</dict>
@@ -158,7 +158,7 @@
 		<key>h</key>
 		<integer>450</integer>
 		<key>img</key>
-		<string>http://img.zngirls.com/gallery/21337/16120/0.jpg</string>
+		<string>https://thumbnail0.baidupcs.com/thumbnail/a288c99cc1ee57289d7a98ef350668bc?fid=3710047365-250528-537714887942573&amp;time=1480168800&amp;rt=sh&amp;sign=FDTAER-DCb740ccc5511e5e8fedcff06b081203-BQoH0EfTZF%2F8gXdRhLZAkFTg5bU%3D&amp;expires=8h&amp;chkv=0&amp;chkbd=0&amp;chkpc=&amp;dp-logid=7675670525866545280&amp;dp-callid=0&amp;size=c710_u400&amp;quality=100</string>
 		<key>w</key>
 		<integer>299</integer>
 	</dict>
